--- a/index_g.html
+++ b/index_g.html
@@ -7,9 +7,9 @@
 
     <!-- Generated with Sphinx 8.2.3 and Furo 2024.08.06 -->
         <title>GRAFS-E 01/02/25 documentation</title>
-      <link rel="stylesheet" type="text/css" href="Doc_grafse/_static/pygments.css?v=8f2a1f02" />
-    <link rel="stylesheet" type="text/css" href="Doc_grafse/_static/styles/furo.css?v=354aac6f" />
-    <link rel="stylesheet" type="text/css" href="Doc_grafse/_static/styles/furo-extensions.css?v=302659d7" />
+      <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=8f2a1f02" />
+    <link rel="stylesheet" type="text/css" href="_static/styles/furo.css?v=354aac6f" />
+    <link rel="stylesheet" type="text/css" href="_static/styles/furo-extensions.css?v=302659d7" />
     
     
 
