--- a/these_en.html
+++ b/these_en.html
@@ -177,7 +177,7 @@
                                        style="color:#ffffff; text-decoration:underline;"
                                        title="Access the online model">Access the online model</a></li>
 
-                                <li><a href="Doc_grafse/index.html"
+                                <li><a href="indexg.html"
                                        style="color:#ffffff; text-decoration:underline;"
                                        title="Access the Python documentation">Access the Python documentation</a></li>
                             </ul>
