--- a/these.html
+++ b/these.html
@@ -193,7 +193,7 @@
                                      style="color:#ffffff; text-decoration:underline;"
                                      title="Accès au modèle en ligne">Accès au modèle en ligne</a></li>
 
-                              <li><a href="indexg.html"
+                              <li><a href="https://adrienfaustegay.github.io/grafs-e-docs/"
                                      style="color:#ffffff; text-decoration:underline;"
                                      title="Accès à la documentation Python">Accès à la documentation python</a></li>
                             </ul>
